// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`'icons' component renders <Icon> ChevronRight unchanged 1`] = `
<div>
  <span
    class="outer-wrapper"
    style="height: 20px; width: 20px;"
  >
    <span
      class="inner-wrapper"
      style="height: 20px; width: 20px;"
    >
      <svg
        fill="none"
        height="100%"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2.5"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`'icons' component renders <Icon> Download unchanged 1`] = `
<div>
  <span
    class="outer-wrapper"
    style="height: 20px; width: 20px;"
  >
    <span
      class="inner-wrapper"
      style="height: 20px; width: 20px;"
    >
      <svg
        fill="none"
        height="100%"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2.5"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
        />
        <polyline
          points="7 10 12 15 17 10"
        />
        <line
          x1="12"
          x2="12"
          y1="15"
          y2="3"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`'icons' component renders <Icon> OpenExternal unchanged 1`] = `
<div>
  <span
    class="outer-wrapper"
    style="height: 20px; width: 20px;"
  >
    <span
      class="inner-wrapper"
      style="height: 20px; width: 20px;"
    >
      <svg
        fill="none"
        height="100%"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2.5"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
        />
        <polyline
          points="15 3 21 3 21 9"
        />
        <line
          x1="10"
          x2="21"
          y1="14"
          y2="3"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`'icons' component renders <Icon> Share unchanged 1`] = `
<div>
  <span
    class="outer-wrapper"
    style="height: 20px; width: 20px;"
  >
    <span
      class="inner-wrapper"
      style="height: 20px; width: 20px;"
    >
      <svg
        fill="none"
        height="100%"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2.5"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="18"
          cy="5"
          r="3"
        />
        <circle
          cx="6"
          cy="12"
          r="3"
        />
        <circle
          cx="18"
          cy="19"
          r="3"
        />
        <line
          x1="8.59"
          x2="15.42"
          y1="13.51"
          y2="17.49"
        />
        <line
          x1="15.41"
          x2="8.59"
          y1="6.51"
          y2="10.49"
        />
      </svg>
    </span>
  </span>
</div>
`;
